# ParallelComputingOpenMP

./: README.md
src/: CMakeLists.txt  parallel.cpp  sequential.cpp
